#
#  Name: RELEASE_NOTES
#
#  Rem:  This files describes release notes for 
#        the FastFeedback IOC Application.        
#
#  Auth: 19-May-2015, L. Piccoli         (lpiccoli)
#        18-Nov-2015, A. Babbitt         (ababbitt)
#               2017, J. Mock            (jmock)
#      
#==============================================================
#
FastFeedback-R1-0-19 13-Feb-2018  Jeremy Mock (JMOCK)
  Change Longitudinal::updateActuator() so that the offset PV is
  directly applied to the actuator value sent on fcom.  This will
  allow users to put in offsets for different patterns.

FastFeedback-R1-0-18 22-Aug-2017  Jeremy Mock (JMOCK)
  Fix fastFeedBackApp/src/framework/Loop.cc (and many other places)
    The function call to "evrTimePutPulseID" was not applied in all
    cases for linux builds (only applied with #ifdef for RTEMS builds).
    When the code was written, linux support for evr was not available,
    so when running on linux, the pulse ID was not applied to the
    end of the timestamp.  The BLD IOC was checking for the pulse ID, not
    finding the correct one, and rejecting the data from the FBCK:FB05:TR05
    (fast Undulator).  This #ifdef condition has been removed from everywhere
    it appeared. 

FastFeedback-R1-0-17 22-Aug-2017  Jeremy Mock (JMOCK)
  Fix vioc-sys0-lgo1/st-on.cmd broken link in PHASE_LNK

FastFeedback-R1-0-16 19-Jul-2017  Jeremy Mock (JMOCK)
  Fix vioc-sys0-lg01/st.cmd invocation of 3 state functions:
      Passing the the wrong macros causing the sequences to run incorrectly
  Fix common/st.cmd to include a macro "LOCA_NAME" which was needed to run
      LoopConfiguration.cc correctly - causing seg faults in vioc-und1-tr02
  Change to seq version R2.2.4-1.0 which dumps any issues while running

FastFeedback-R1-0-15 22-May-2017  Jeremy Mock (JMOCK)
  Add vioc-bsy0-tr02 to accomodate reconfiguration of BSY

FastFeedback-R1-0-14:
   Updated st.cmd to take into account EVR-related, unique PV names