@@ -1,0 +1,109 @@
+#! Generated by VisualDCT v2.6
+#! DBDSTART
+#! DBDEND
+
+
+#==============================================================================
+# 
+# Abs:  Database template for feedback settled status
+#
+# Name: fbckSettled.template
+#
+# Author: J. Luong (ajluong)
+#
+#
+#==============================================================================
+# Calculates difference between state and setpoint
+record(calc, "$(LOOP):S$(NUM):DIFF") {
+  field(DESC, "Abs of diff between state and setpoint")
+  field(SCAN, "Passive")
+  field(CALC, "ABS(A-B)")
+  field(INPA, "$(LOOP):S$(NUM) CPP")
+  field(INPB, "$(LOOP):S$(NUM)DES")
+  field(FLNK, "$(LOOP):S$(NUM):DBUFF")
+}
+
+# Stores difference between state and setpoint
+# NSAM is the sample size of the buffer for calculating the moving average
+# VAL is an array
+record(compress, "$(LOOP):S$(NUM):DBUFF") {
+  field(DESC, "Buffer for difference values")
+  field(INP, "$(LOOP):S$(NUM):DIFF")
+  field(ALG, "Circular Buffer")
+  field(NSAM, "300")
+  field(SCAN, "Passive")
+  field(FLNK, "$(LOOP):S$(NUM):DAVG")
+}
+
+# Computes the avg of array input
+# N should equal NSAM to compress to one average value
+record(compress, "$(LOOP):S$(NUM):DAVG") {
+  field(DESC, "Computes Average of current sample")
+  field(ALG, "N to 1 Average")
+  field(INP, "$(LOOP):S$(NUM):DBUFF.VAL")
+  field(N, "300")
+  field(SCAN, "Passive")
+  field(FLNK, "$(LOOP):S$(NUM):STL")
+}
+
+record(ai, "$(LOOP):S$(NUM):DBSTPNT") {
+  field(DESC, "Deadband setpoint")
+  field(VAL, "0")
+  info(autosaveFields, "VAL")
+
+}
+
+# Compares current running average to deadband to determine SETTLED or NOT_SETTLED
+# VAL = 1 if SETTLED, 0 if NOT_SETTLED
+record(calc, "$(LOOP):S$(NUM):STL") {
+  field(DESC, "Compares running average to deadband setpoint")
+  field(CALC, "A > B ? 1:0")
+  field(INPA, "$(LOOP):S$(NUM):DBSTPNT")
+  field(INPB, "$(LOOP):S$(NUM):DAVG")
+  field(SCAN, "Passive")
+  field(FLNK, "$(LOOP):S$(NUM):STLSTAT")
+}
+
+record(bi, "$(LOOP):S$(NUM):STLSTAT") {
+  field(DESC, "Updates status of SETTLED or NOT_SETTLED")
+  field(INP, "$(LOOP):S$(NUM):STL")
+  field(ZSV, "MAJOR")
+  field(OSV, "NO_ALARM")
+  field(ZNAM, "NOT_SETTLED")
+  field(ONAM, "SETTLED")
+  field(SCAN, "Passive")
+}
+
+#! Further lines contain data used by VisualDCT
+#! View(0,0,1.0)
+#! Record("$(LOOP):S$(NUM):DIFF",20,20,0,0,"$(LOOP):S$(NUM):DIFF")
+#! Field("$(LOOP):S$(NUM):DIFF.INPA",16777215,1,"$(LOOP):S$(NUM):DIFF.INPA")
+#! Field("$(LOOP):S$(NUM):DIFF.INPB",16777215,1,"$(LOOP):S$(NUM):DIFF.INPB")
+#! Field("$(LOOP):S$(NUM):DIFF.FLNK",16777215,1,"$(LOOP):S$(NUM):DIFF.FLNK")
+#! Link("$(LOOP):S$(NUM):DIFF.FLNK","$(LOOP):S$(NUM):DBUFF")
+#! Field("$(LOOP):S$(NUM):DIFF.VAL",16777215,0,"$(LOOP):S$(NUM):DIFF.VAL")
+#! Record("$(LOOP):S$(NUM):DBUFF",260,20,0,1,"$(LOOP):S$(NUM):DBUFF")
+#! Field("$(LOOP):S$(NUM):DBUFF.INP",16777215,0,"$(LOOP):S$(NUM):DBUFF.INP")
+#! Link("$(LOOP):S$(NUM):DBUFF.INP","$(LOOP):S$(NUM):DIFF.VAL")
+#! Field("$(LOOP):S$(NUM):DBUFF.FLNK",16777215,1,"$(LOOP):S$(NUM):DBUFF.FLNK")
+#! Link("$(LOOP):S$(NUM):DBUFF.FLNK","$(LOOP):S$(NUM):DAVG")
+#! Field("$(LOOP):S$(NUM):DBUFF.VAL",16777215,0,"$(LOOP):S$(NUM):DBUFF.VAL")
+#! Record("$(LOOP):S$(NUM):DAVG",500,20,0,1,"$(LOOP):S$(NUM):DAVG")
+#! Field("$(LOOP):S$(NUM):DAVG.INP",16777215,0,"$(LOOP):S$(NUM):DAVG.INP")
+#! Link("$(LOOP):S$(NUM):DAVG.INP","$(LOOP):S$(NUM):DBUFF.VAL")
+#! Field("$(LOOP):S$(NUM):DAVG.FLNK",16777215,1,"$(LOOP):S$(NUM):DAVG.FLNK")
+#! Link("$(LOOP):S$(NUM):DAVG.FLNK","$(LOOP):S$(NUM):STL")
+#! Field("$(LOOP):S$(NUM):DAVG.VAL",16777215,1,"$(LOOP):S$(NUM):DAVG.VAL")
+#! Record("$(LOOP):S$(NUM):DBSTPNT",740,16,0,0,"$(LOOP):S$(NUM):DBSTPNT")
+#! Field("$(LOOP):S$(NUM):DBSTPNT.VAL",16777215,0,"$(LOOP):S$(NUM):DBSTPNT.VAL")
+#! Record("$(LOOP):S$(NUM):STL",980,20,0,0,"$(LOOP):S$(NUM):STL")
+#! Field("$(LOOP):S$(NUM):STL.INPA",16777215,0,"$(LOOP):S$(NUM):STL.INPA")
+#! Link("$(LOOP):S$(NUM):STL.INPA","$(LOOP):S$(NUM):DBSTPNT.VAL")
+#! Field("$(LOOP):S$(NUM):STL.INPB",16777215,0,"$(LOOP):S$(NUM):STL.INPB")
+#! Link("$(LOOP):S$(NUM):STL.INPB","$(LOOP):S$(NUM):DAVG.VAL")
+#! Field("$(LOOP):S$(NUM):STL.FLNK",16777215,1,"$(LOOP):S$(NUM):STL.FLNK")
+#! Link("$(LOOP):S$(NUM):STL.FLNK","$(LOOP):S$(NUM):STLSTAT")
+#! Field("$(LOOP):S$(NUM):STL.VAL",16777215,0,"$(LOOP):S$(NUM):STL.VAL")
+#! Record("$(LOOP):S$(NUM):STLSTAT",1220,26,0,1,"$(LOOP):S$(NUM):STLSTAT")
+#! Field("$(LOOP):S$(NUM):STLSTAT.INP",16777215,0,"$(LOOP):S$(NUM):STLSTAT.INP")
+#! Link("$(LOOP):S$(NUM):STLSTAT.INP","$(LOOP):S$(NUM):STL.VAL")
