@@ -1,0 +1,5 @@
+TOP = ../..
+include $(TOP)/configure/CONFIG
+ARCH = linuxRT_glibc-x86_64
+TARGETS = envPaths
+include $(TOP)/configure/RULES.ioc
