@@ -11,6 +11,11 @@
 #      
 #==============================================================
 #
+
+FastFeedback-R1-0-20 20-Mar-2018  James Luong (ajluong)
+  Add sioc-sys0-fb01 for convergence functionality.
+  CATER: 138128
+
 FastFeedback-R1-0-19 13-Feb-2018  Jeremy Mock (JMOCK)
   Change Longitudinal::updateActuator() so that the offset PV is
   directly applied to the actuator value sent on fcom.  This will
